small changes in aapppp

--- a/index.html
+++ b/index.html
@@ -69,13 +69,28 @@
         background-color: blue;
         color: white;
         border: none;
+        cursor: pointer;
+    }
+    .btn-sub:hover{
+        background-color: rgb(21, 21, 156);
+    }
+    .btn-del{
+        width: 100px;
+        height: 30px;
+        border-radius: 10px;
+        background-color: red;
+        color: white;
+        border: none;
+    }
+    .btn-del:hover{
+        background-color: rgb(170, 15, 15);
     }
     .todo {
         border: 4px double navy;
         margin: 10px;
         padding: 10px;
         background: lightblue;
-        
+
         color: darkblue;
         display: flex;
         justify-content: space-between;
