--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
         margin: 10px;
         padding: 10px;
         background: lightblue;
-
+        opacity: 1;
+        border-radius: 1rem;
         color: darkblue;
         display: flex;
         justify-content: space-between;
@@ -98,6 +99,29 @@
     }
     .title{
         color: aliceblue;
+    }
+    .btn-delete{
+        border: none;
+        background-color: blue;
+        color: white;
+        border-radius: 1.2rem;
+        cursor: pointer;
+        width: 5rem;
+    }
+    .btn-delete:hover{
+        background-color: rgb(17, 17, 145);
+    }
+    .btn-complete{
+        border: none;
+        background-color: green;
+        color: white;
+        border-radius: 1.2rem;
+        cursor: pointer;
+        width: 8rem;
+        height: 2rem;
+    }
+    .btn-complete:hover{
+        background-color: rgb(17, 17, 145);
     }
 </style>
 <body>
